# cosmwasm-ibc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASES.md
.changelog/: config.toml
.changelog/unreleased/breaking-changes/: 3-update-ibc-to-v0.55.1.md
.changelog/v0.55.0/: summary.md
.changelog/v0.55.0/features/: 2-allow-CustomQuery-in-Context.md
.changelog/v0.56.0/: summary.md
.changelog/v0.56.0/breaking-changes/: 5-bump-ibc-and-tendermint.md
.changelog/v0.57.0/: summary.md
.github/workflows/: rust.yaml  upload-cw-clients.yaml
ibc-clients/cw-context/: Cargo.toml
ibc-clients/cw-context/src/: api.rs  handlers.rs  lib.rs
ibc-clients/cw-context/src/context/: client_ctx.rs  custom_ctx.rs  mod.rs
ibc-clients/cw-context/src/types/: error.rs  helper.rs  msgs.rs
ibc-clients/cw-context/src/utils/: codec.rs
ibc-clients/ics07-tendermint/: Cargo.toml
ibc-clients/ics07-tendermint/src/: client_type.rs  lib.rs
ibc-clients/ics07-tendermint/src/tests/: fixture.rs  helper.rs
