[workspace]
resolver = "2"

members = [
  "ibc-clients/cw-context",
  "ibc-clients/ics07-tendermint",
]

[workspace.package]
version      = "0.54.0"
license      = "Apache-2.0"
edition      = "2021"
rust-version = "1.75.0"
readme       = "README.md"
repository   = "https://github.com/cosmos/ibc-rs"
authors      = [ "Informal Systems <hello@informal.systems>" ]

[workspace.dependencies]
# external dependencies
derive_more = { version = "0.99.18", default-features = false }
prost       = { version = "0.13.1", default-features = false }
serde-json  = { package = "serde-json-wasm", version = "1.0.1", default-features = false }

# cosmwasm dependencies
cosmwasm-std    = { version = "2.1.0" }
cosmwasm-schema = { version = "2.1.0" }
cw-storage-plus = { version = "2.0.0" }

# local dependencies
ibc-client-cw = { version = "0.54.0", path = "./ibc-clients/cw-context", default-features = false }

# ibc dependencies
ibc-core              = { version = "0.55.0", default-features = false }
ibc-client-tendermint = { version = "0.55.0", default-features = false }
ibc-client-wasm-types = { version = "0.55.0", default-features = false }
ibc-testkit           = { version = "0.55.0", default-features = false }

# cosmos dependencies
tendermint         = { version = "0.38.0", default-features = false }
tendermint-testgen = { version = "0.38.0", default-features = false }

[workspace.lints.rust]
trivial_casts         = "deny"
trivial_numeric_casts = "deny"
unused_import_braces  = "deny"
unused_qualifications = "deny"
rust_2018_idioms      = { level = "deny", priority = 2 }
unsafe_code           = "forbid"

[workspace.lints.clippy]
use_self = "warn"

[patch.crates-io]
ibc-core = { path = "./../ibc-rs/ibc-core" }
ibc-client-tendermint = { path = "./../ibc-rs/ibc-clients/ics07-tendermint" }
ibc-client-wasm-types = { path = "./../ibc-rs/ibc-clients/ics08-wasm/types" }
ibc-testkit = { path = "./../ibc-rs/ibc-testkit" }