[workspace]
resolver = "2"

members = [
  "ibc-clients/cw-context",
  "ibc-clients/ics07-tendermint",
]

[workspace.package]
version      = "0.57.0"
license      = "Apache-2.0"
edition      = "2021"
rust-version = "1.79.0"
readme       = "README.md"
repository   = "https://github.com/informalsystems/cosmwasm-ibc"
authors      = [ "Informal Systems <hello@informal.systems>" ]

[workspace.dependencies]
# external dependencies
derive_more = { version = "1.0.0", default-features = false }
prost       = { version = "0.13.1", default-features = false }
serde-json  = { package = "serde-json-wasm", version = "1.0.1", default-features = false }

# cosmwasm dependencies
cosmwasm-std    = { version = "2.1.0" }
cosmwasm-schema = { version = "2.1.0" }
cw-storage-plus = { version = "2.0.0" }

# local dependencies
ibc-client-cw = { version = "0.57.0", path = "./ibc-clients/cw-context", default-features = false }

# ibc dependencies
ibc-core              = { version = "0.57.0", default-features = false }
ibc-client-tendermint = { version = "0.57.0", default-features = false }
ibc-client-wasm-types = { version = "0.57.0", default-features = false }
ibc-testkit           = { version = "0.57.0", default-features = false }

# cosmos dependencies
tendermint         = { version = "0.40.0", default-features = false }
tendermint-testgen = { version = "0.40.0", default-features = false }

[workspace.lints.rust]
trivial_casts         = "deny"
trivial_numeric_casts = "deny"
unused_import_braces  = "deny"
unused_qualifications = "deny"
rust_2018_idioms      = { level = "deny", priority = 2 }
unsafe_code           = "forbid"

[workspace.lints.clippy]
use_self = "warn"
